# PROJ-JNI

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  allclasses-index.html  allpackages-index.html  constant-values.html  customization.css  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  install.html  member-search-index.js  module-search-index.js  overview-tree.html  package-search-index.js  pom.xml  search.html  serialized-form.html  sis.css  system-properties.html  tag-search-index.js  type-search-index.js
.github/workflows/: build.yml
example/: README.md  TransformPoints.java
org.osgeo.proj/: module-summary.html
org.osgeo.proj/org/osgeo/proj/: ComparisonCriterion.html  CoordinateOperationContext.html  GridAvailabilityUse.html  IntermediateCRSUse.html  NoUnitImplementationException.html  Proj.html  ReferencingFormat.Convention.html  ReferencingFormat.html  SourceTargetCRSExtentUse.html  SpatialCriterion.html  UnformattableObjectException.html  Units.html  UnparsableObjectException.html  UnsupportedImplementationException.html  package-summary.html  package-tree.html  package-use.html
org.osgeo.proj/org/osgeo/proj/class-use/: ComparisonCriterion.html  CoordinateOperationContext.html  GridAvailabilityUse.html  IntermediateCRSUse.html  NoUnitImplementationException.html  Proj.html  ReferencingFormat.Convention.html  ReferencingFormat.html  SourceTargetCRSExtentUse.html  SpatialCriterion.html  UnformattableObjectException.html  Units.html  UnparsableObjectException.html  UnsupportedImplementationException.html
org/kortforsyningen/proj/: ComparisonCriterion.html  CoordinateOperationContext.html  FormattingException.html  GridAvailabilityUse.html  IntermediateCRSUse.html  NoUnitImplementationException.html  Proj.html  ReferencingFormat.Convention.html  ReferencingFormat.html  SourceTargetCRSExtentUse.html  SpatialCriterion.html  UnformattableObjectException.html  Units.html  UnparsableObjectException.html  UnsupportedImplementationException.html  WKTFormat.Convention.html  WKTFormat.html  package-summary.html  package-tree.html  package-use.html
org/kortforsyningen/proj/class-use/: ComparisonCriterion.html  CoordinateOperationContext.html  FormattingException.html  GridAvailabilityUse.html  IntermediateCRSUse.html  NoUnitImplementationException.html  Proj.html  ReferencingFormat.Convention.html  ReferencingFormat.html  SourceTargetCRSExtentUse.html  SpatialCriterion.html  UnformattableObjectException.html  Units.html  UnparsableObjectException.html  UnsupportedImplementationException.html  WKTFormat.Convention.html  WKTFormat.html
org/osgeo/proj/: CoordinateOperationContext.html  GridAvailabilityUse.html  NoUnitImplementationException.html  SpatialCriterion.html  Units.html  package-use.html
org/osgeo/proj/class-use/: ComparisonCriterion.html  IntermediateCRSUse.html  Proj.html  ReferencingFormat.Convention.html  SourceTargetCRSExtentUse.html  SpatialCriterion.html
src/config/: logging.properties  security.policy
src/main/config/: security.policy
src/main/cpp/: CMakeLists.txt  Makefile  README.md  WKTFormat.h  assertions.cpp  bindings.cpp  build.xml  org_kortforsyningen_proj_AuthorityFactory.h  org_kortforsyningen_proj_BaseObject.h  org_kortforsyningen_proj_CompoundCS.h  org_kortforsyningen_proj_Context.cpp  org_kortforsyningen_proj_Context.h  org_kortforsyningen_proj_Convention.h  org_kortforsyningen_proj_NativeResource.h  org_kortforsyningen_proj_ObjectFactory.h  org_kortforsyningen_proj_ObjectReference.h  org_kortforsyningen_proj_Proj.h  org_kortforsyningen_proj_Property.h  org_kortforsyningen_proj_ReferencingFormat$Convention.h  org_kortforsyningen_proj_ReferencingFormat.h  org_kortforsyningen_proj_SharedObject.h  org_kortforsyningen_proj_SharedPointer.h  org_kortforsyningen_proj_Transform.h  org_kortforsyningen_proj_Type.h  org_kortforsyningen_proj_UnitOfMeasure.h  org_kortforsyningen_proj_WKTFormat$Convention.h  org_osgeo_proj_AuthorityFactory.h  org_osgeo_proj_CompoundCS.h  org_osgeo_proj_Context.h  org_osgeo_proj_Convention.h  org_osgeo_proj_NativeResource.h  org_osgeo_proj_ObjectFactory.h  org_osgeo_proj_Property.h  org_osgeo_proj_ReferencingFormat.h  org_osgeo_proj_SharedPointer.h  org_osgeo_proj_Transform.h  org_osgeo_proj_Type.h  org_osgeo_proj_UnitOfMeasure.h
src/main/java/: module-info.java
src/main/java/org/kortforsyningen/proj/: Alias.java  AuthorityFactory.java  Axis.java  BaseObject.java  CRS.java  CS.java  CleanerThread.java  ComparisonCriterion.java  CompoundCS.java  Context.java  CoordinateOperationContext.java  Datum.java  FormattingException.java  GridAvailabilityUse.java  IdentifiableObject.java  IdentifiedObject.java  IntermediateCRSUse.java  NativeResource.java  NoUnitImplementationException.java  ObjectFactory.java  ObjectIdentifier.java  ObjectReference.java  Operation.java  OperationFactory.java  Parameter.java  ParameterGroup.java  ParameterType.java  Proj.java  Property.java  ReferencingFormat.java  SharedObject.java  SharedObjects.java  SharedPointer.java  SimpleAccuracy.java  SimpleCitation.java  SimpleDirectPosition.java  SimpleExtent.java  SimpleName.java  SourceTargetCRSExtentUse.java  SpatialCriterion.java  (+10 more)
src/main/java/org/osgeo/proj/: Alias.java  AuthorityFactory.java  Axis.java  CRS.java  CS.java  CleanerThread.java  ComparisonCriterion.java  CompoundCS.java  Context.java  CoordinateOperationContext.java  Datum.java  GridAvailabilityUse.java  IdentifiableObject.java  IntermediateCRSUse.java  NativeResource.java  NoUnitImplementationException.java  ObjectFactory.java  ObjectIdentifier.java  Operation.java  OperationFactory.java  Parameter.java  ParameterGroup.java  ParameterType.java  Proj.java  Property.java  ReferencingFormat.java  SharedObjects.java  SharedPointer.java  SimpleAccuracy.java  SimpleCitation.java  SimpleDirectPosition.java  SimpleExtent.java  SimpleName.java  SourceTargetCRSExtentUse.java  SpatialCriterion.java  Transform.java  (+8 more)
src/main/java9/: module-info.java
src/main/javadoc/: customization.css
src/test/java/: module-info.java
(+65 files in other folders)
